# Analizador-Lexico

./: CMakeLists.txt
src/: TS.c  TS.h  analizador_lexico.c  analizador_lexico.h  analizador_sintactico.c  analizador_sintactico.h  def.h  gestor_errores.c  gestor_errores.h  main.c  sistema_entrada.c  sistema_entrada.h
